# cube-solver

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-build-release.yml
src/: CMakeLists.txt  cli.cpp  cli.hpp  main.cpp  main.hpp
src/model/: Cube.cpp  Cube.hpp  Cube1DArray.cpp  Cube1dArray.cpp  Cube3DArray.cpp  Cube3dArray.cpp  CubeBitboard.cpp  CubeFactory.cpp  CubeFactory.hpp  models.hpp
src/pattern_databases/: CornerDBMaker.cpp  CornerDBMaker.hpp  CornerPatternDatabase.cpp  CornerPatternDatabase.hpp  NibbleArray.cpp  NibbleArray.hpp  PatternDatabase.cpp  PatternDatabase.hpp  PermutationIndexer.hpp  math.cpp  math.hpp
src/solver/: BFSSolver.hpp  DFSSolver.hpp  IDAStarSolver.hpp  IDDFSSolver.hpp  Solver.hpp  SolverFactory.hpp  solvers.hpp
src/ui/: cli.cpp  cli.hpp  scroller.cpp  tui.cpp  tui.hpp  ui.hpp
